# digestly

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  Digestly.dc.html  Dockerfile  README.md  TODO.md  TROUBLESHOOTING.md  docker-compose.yml  prompt.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: ci.yml  docker-publish.yml  openwiki-update.yml
backend/: Cargo.toml
backend/migrations/: 0001_init.sql  0002_oauth.sql  0003_display_username.sql  0004_ai_routing.sql  0005_video_topic_summary_kinds.sql  0006_youtube_auto_summary.sql  0007_video_provider_routing.sql
backend/src/: config.rs  db.rs  error.rs  healthcheck.rs  http.rs  isolation_tests.rs  main.rs  maintenance.rs  query.rs  seed.rs  seed_demo.rs  settings.rs
backend/src/ai/: budget.rs  client.rs  crypto.rs  mod.rs  provider.rs  summarize.rs  transcript.rs  transcript_worker.rs
backend/src/auth/: bootstrap.rs  extract.rs  password.rs  session.rs
backend/src/digest/: cron.rs  mod.rs
backend/src/ingest/: discover.rs  mod.rs  scheduler.rs  settings.rs  store.rs
backend/src/notify/: mod.rs
backend/src/routes/: ai.rs  auth.rs  categories.rs  digest.rs  events.rs  feeds.rs  items.rs  me.rs  mod.rs  notifications.rs  passkeys.rs  settings.rs
backend/tests/fixtures/: sample_atom.xml  sample_rss.xml
docs/: background-tasks.md  capacitor-android-plan.md  code-standards.md  configuration.md  deployment.md  example-digest.md  multi-arch.md  project-structure.md  s2-android-plan.md  youtube-feed-throttling.md
docs/adr/: 0001-ci-is-the-only-merge-gate.md  0002-verify-facts-about-the-outside-world.md  0003-single-multi-arch-image-via-buildx.md  0004-per-user-incremental-digest-window.md  0005-sqlite-not-postgres-redis.md  0006-youtube-rss-not-oauth-subscriptions-api.md  0007-reddit-json-api-with-rss-fallback.md  0008-one-react-build-for-web-and-native.md  0009-categories-not-folders.md  0010-shared-ingest-per-user-state.md  0011-runtime-sqlx-not-compile-time-macros.md
docs/plans/: capacitor-android.md  s2-android.md
openwiki/: .last-update.json  auth-and-operations.md  quickstart.md
openwiki/architecture/: overview.md
openwiki/backend/: ai-and-digest.md  ingestion.md
openwiki/frontend/: overview.md
scripts/: check-one-component-per-file.mjs  component-baseline.json
src/: config.rs  db.rs  error.rs  events.rs  http.rs  isolation_tests.rs  main.rs  maintenance.rs  opml.rs  query.rs  seed.rs  seed_demo.rs
src/ai/: client.rs  mod.rs  provider.rs  summarize.rs  transcript.rs  transcript_worker.rs
src/auth/: bootstrap.rs  extract.rs  mod.rs  passkey.rs
src/digest/: cron.rs  mod.rs
src/ingest/: content.rs  discover.rs  fetch.rs  mod.rs  parse.rs  reddit.rs  scheduler.rs  settings.rs  store.rs  url_util.rs
src/notify/: mod.rs
src/oauth/: mod.rs
src/routes/: admin.rs  ai.rs  auth.rs  categories.rs  digest.rs  feeds.rs  items.rs  me.rs  mod.rs  notifications.rs  oauth.rs  opml.rs  passkeys.rs  settings.rs
tests/fixtures/: sample_jsonfeed.json
web/: biome.json  index.html  package.json  playwright.config.ts  playwright.screenshots.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
(+150 files in other folders)
